# purifier

./: .gitignore  README.md  purifier.py  pyproject.toml  tests.py
docs/: Available-scrapers.md  Tutorial.md
test_data/: Hacker News.html
