[tool.poetry]
name = "purifier"
version = "0.2.12"
description = "A simple scraping library."
authors = ["Gleb Akhmerov <nontrivial-analysis@proton.me>"]
packages = [ { include = "purifier.py" } ]
readme = "README.md"
license = "AGPL-3.0-or-later"

[tool.poetry.urls]
"Homepage" = "https://github.com/gleb-akhmerov/purifier"

[tool.pytest.ini_options]
python_files = ["tests.py"]

[tool.mypy]
show_column_numbers = true

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
cloudscraper = "^1.2.60"
jq = "^1.2.2"
lxml = "^4.9.1"
jsonfinder = "^0.4.2"
parsy = "^1.4.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
